Fixed Hello alignment issue and updated minor errors

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 
 #hello {
   position: relative;
-  padding: 0;
+  padding: 0 5vh;
 }
 
 #contact {
@@ -31,8 +31,8 @@ body {
 }
 
 .navbar {
+  z-index: 1;
   position: absolute;
-  top: 0;
   width: 100%;
 }
 
@@ -128,7 +128,6 @@ i:hover {
 
 .footer {
   padding-bottom: 25px;
-  /* margin-top: 150px; */
   text-align: center;
   bottom: 0;
   left: 0;
